--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^4.4.4
   ethereum: ^5.0.2
   web3dart: ^2.6.1
+  image_picker: ^0.8.7
 
 dev_dependencies:
   flutter_test:
