--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   google_maps_flutter: ^2.2.5
   location: ^4.4.0
   geolocator: ^9.0.2
+  web_socket_channel: ^2.3.0
+  flutter_web3_provider: ^1.0.6
 
 dev_dependencies:
   flutter_test:
