--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   geolocator: ^9.0.2
   web_socket_channel: ^2.3.0
   flutter_web3_provider: ^1.0.6
+  dart_web3: ^0.0.3
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
