--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_web3_provider: ^1.0.6
   dart_web3: ^0.0.3
   provider: ^6.0.5
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
