--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/logo.png
+    - images/logistic.png
     - images/buttons/
     - images/personnel/
     - contracts/build/contracts/Blockchain.json
